Fix Anton's 4 issues: iframe titles, gallery-credit placement, width overflow, hero-image width

--- a/app/globals.css
+++ b/app/globals.css
@@ -376,6 +376,7 @@ a:hover {
 
 .hero-image-full img {
   width: 100%;
+  max-width: 100vw;
   height: auto;
   display: block;
   max-height: 580px;
@@ -1023,7 +1024,7 @@ a:hover {
 
 .article-body .container-article {
   max-width: 1060px;
-  width: 100vw;
+  width: 100%;
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   padding-left: 24px;
